openshift/test/06-daemon-postgres-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: daemon-postgres-test
  labels:
    app.kubernetes.io/name: daemon-postgres
    app.kubernetes.io/environment: test
spec:
  selector:
    app.kubernetes.io/name: daemon-postgres
    app.kubernetes.io/environment: test
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
