openshift/test/10-rules-daemon-health-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: rules-enrichment-daemon-health-test
  labels:
    app.kubernetes.io/name: rules-enrichment-daemon
    app.kubernetes.io/environment: test
spec:
  selector:
    app.kubernetes.io/name: rules-enrichment-daemon
    app.kubernetes.io/environment: test
  ports:
    - name: http-health
      port: 8080
      targetPort: health
